# FashionFlow

./: .env.example  .gitignore  README.md  config.py  logger.py  pyproject.toml
docs/: schema.md  technical_documentation.md
ingestion/: audit.py  pipeline.py  quality.py  quarantine.py
ingestion/sources/: commerce_api.py  inventory_api.py  marketing_api.py
orchestration/: definitions.py
orchestration/assets/: checks.py  domain_ingestion.py  ingestion.py  sample.py  transformations.py
scripts/: validate_bigquery.py  validate_e2e.py  validate_schema.py
source_system/api/: dependencies.py  main.py  schemas.py  schemas_v2.py
source_system/api/routes/: __init__.py  customers.py  inventory.py  marketing.py  order_items.py  orders.py  payments.py  products.py  refunds.py
source_system/database/: connection.py  inventory_models.py  marketing_models.py  models.py  schema_evolution.py  seed.py
source_system/generators/: __init__.py  catalog.py  continuous.py  historical.py  inventory.py  marketing.py
tests/: conftest.py
tests/source_system/: conftest.py  test_api.py  test_auth.py  test_database.py  test_sprint3.py
transformations/: .user.yml  dbt_project.yml  profiles.yml
transformations/macros/: generate_schema_name.sql
transformations/models/marts/: _marts__models.yml  fct_daily_marketing_performance.sql  fct_orders.sql
transformations/models/staging/: _sources.yml  _staging__models.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_refunds.sql  stg_sample.sql
transformations/snapshots/: product_snapshot.sql
transformations/tests/: assert_net_revenue_not_exceeds_total.sql  assert_order_total_matches_components.sql  assert_roas_not_negative.sql
(+13 files in other folders)
