[project]
name = "fashionflow"
version = "0.1.0"
description = "Enterprise ecommerce data platform — FastAPI → dltHub → BigQuery → dbt Core → Dagster"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Faheel Anjum" }]

dependencies = [
    # Source system
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "faker>=28.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Ingestion
    "dlt[bigquery]>=1.0.0",

    # Transformations
    "dbt-core>=1.8.0",
    "dbt-bigquery>=1.8.0",

    # Orchestration
    "dagster>=1.8.0",
    "dagster-webserver>=1.8.0",
    "dagster-dbt>=0.24.0",

    # Google Cloud
    "google-cloud-bigquery>=3.25.0",

    # Utilities
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "source_system",
    "ingestion",
    "orchestration",
    "config.py",
    "logger.py",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["fashionflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
